--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 	
-		<h3 class="heading">Heading</h3>
+		<!-- <h3 class="heading">Heading</h3>
 		<h3>Heading</h3>
 		
 		<h2>Heading 2</h2>
@@ -15,7 +15,12 @@
 
 		<div id="block">
 			<p class="heading">Lorem ipsum.</p>
-		</div>
+		</div> -->
+		<section></section>
+		<section id="header">
+			<h1>heading</h1>
+		</section>
+		<section></section>
 	
 
 </body>
